--- a/inforM3-designer/pom.xml
+++ b/inforM3-designer/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <artifactId>inforM3</artifactId>
-        <groupId>com.inductiveautomation.erp.inforM3</groupId>
+        <groupId>org.ignitionmdc.erp.inforM3</groupId>
         <version>1.8</version>
     </parent>
 
@@ -14,12 +14,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.inductiveautomation.erp.inforM3</groupId>
+            <groupId>org.ignitionmdc.erp.inforM3</groupId>
             <artifactId>inforM3-client</artifactId>
             <version>1.8</version>
         </dependency>
         <dependency>
-            <groupId>com.inductiveautomation.erp.inforM3</groupId>
+            <groupId>org.ignitionmdc.erp.inforM3</groupId>
             <artifactId>inforM3-common</artifactId>
             <version>1.8</version>
         </dependency>
