--- a/inforM3-gateway/pom.xml
+++ b/inforM3-gateway/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <artifactId>inforM3</artifactId>
-        <groupId>com.inductiveautomation.erp.inforM3</groupId>
+        <groupId>org.ignitionmdc.erp.inforM3</groupId>
         <version>1.8</version>
     </parent>
 
@@ -30,7 +30,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.inductiveautomation.erp.inforM3</groupId>
+            <groupId>org.ignitionmdc.erp.inforM3</groupId>
             <version>1.8</version>
             <artifactId>inforM3-common</artifactId>
         </dependency>
