--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.inductiveautomation.erp.inforM3</groupId>
+    <groupId>org.ignitionmdc.erp.inforM3</groupId>
     <artifactId>inforM3</artifactId>
     <version>1.8</version>
     <packaging>pom</packaging>
